Rename \lua_shipout_x:n as \lua_shipout_e:n
The behaviour of # here is e-type not x-type.

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -74,7 +74,7 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[added = 2015-06-30]{\lua_shipout_x:n, \lua_shipout:n}
+% \begin{function}[added = 2018-06-18]{\lua_shipout_e:n, \lua_shipout:n}
 %   \begin{syntax}
 %     \cs{lua_shipout:n} \Arg{token list}
 %   \end{syntax}
@@ -88,8 +88,8 @@
 %   page-building routine: no \TeX{} expansion of the \meta{\Lua{} input}
 %   will occur at this stage.
 %
-%   In the case of the \cs{lua_shipout_x:n} version the input is fully
-%   expanded by \TeX{} in an \texttt{x}-type manner during the shipout
+%   In the case of the \cs{lua_shipout_e:n} version the input is fully
+%   expanded by \TeX{} in an \texttt{e}-type manner during the shipout
 %   operation.
 %   \begin{texnote}
 %     At a \TeX{} level, the \meta{\Lua{} input} is stored as a
@@ -192,12 +192,12 @@
 %<@@=lua>
 %    \end{macrocode}
 %
-% \begin{macro}[EXP]{\@@_escape:n, \@@_now:n, \@@_shipout_x:n}
+% \begin{macro}[EXP]{\@@_escape:n, \@@_now:n, \@@_shipout:n}
 %   Copies of primitives.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_escape:n    \tex_luaescapestring:D
-\cs_new_eq:NN \@@_now:n       \tex_directlua:D
-\cs_new_eq:NN \@@_shipout_x:n \tex_latelua:D
+\cs_new_eq:NN \@@_escape:n  \tex_luaescapestring:D
+\cs_new_eq:NN \@@_now:n     \tex_directlua:D
+\cs_new_eq:NN \@@_shipout:n \tex_latelua:D
 %    \end{macrocode}
 % \end{macro}
 %
@@ -209,7 +209,7 @@
 %    \end{macrocode}
 %
 % \begin{macro}[EXP]{\lua_now:n, \lua_now:e}
-% \begin{macro}{\lua_shipout_x:n, \lua_shipout:n}
+% \begin{macro}{\lua_shipout_e:n, \lua_shipout:n}
 % \begin{macro}[EXP]{\lua_escape:n, \lua_escape:e}
 %   Wrappers around the primitives. As with engines other than \LuaTeX{}
 %   these have to be macros, we give them the same status in all cases.
@@ -217,9 +217,9 @@
 %    \begin{macrocode}
 \cs_new:Npn \lua_now:e #1 { \@@_now:n {#1} }
 \cs_new:Npn \lua_now:n #1 { \lua_now:e { \exp_not:n {#1} } }
-\cs_new_protected:Npn \lua_shipout_x:n #1 { \@@_shiphout_x:n {#1} }
+\cs_new_protected:Npn \lua_shipout_e:n #1 { \@@_shiphout:n {#1} }
 \cs_new_protected:Npn \lua_shipout:n #1
-  { \lua_shipout_x:n { \exp_not:n {#1} } }
+  { \lua_shipout_e:n { \exp_not:n {#1} } }
 \cs_new:Npn \lua_escape:e #1 { \@@_escape:n {#1} }
 \cs_new:Npn \lua_escape:n #1 { \lua_escape:e { \exp_not:n {#1} } }
 \sys_if_engine_luatex:F
@@ -237,7 +237,7 @@
           }
       }
     \clist_map_inline:nn
-      { \lua_shipout_x:n , \lua_shipout:n }
+      { \lua_shipout_e:n , \lua_shipout:n }
       {
         \cs_set_protected:Npn #1 ##1
           {
@@ -264,14 +264,18 @@
 %
 % \subsection{Deprecated functions}
 %
-% \begin{macro}[deprecated = 2019-12-31]{\lua_now_x:n, \lua_escape_x:n}
+% \begin{macro}[EXP, deprecated = 2019-12-31]{\lua_now_x:n, \lua_escape_x:n}
+% \begin{macro}[deprecated = 2019-12-31]{\lua_shipout_x:n}
 %   For removal after 2019-12-31.
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \lua_now:e }
 \cs_new:Npn \lua_now_x:n #1 { \@@_now:n {#1} }
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \lua_escape:e }
 \cs_new:Npn \lua_escape_x:n #1 { \@@_escape:n {#1} }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \lua_shipout_e:n }
+\cs_new_protected:Npn \lua_shipout_x:n #1 { \@@_shipout:n {#1} }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
