--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -305,7 +305,7 @@
 % \begin{function}[EXP,pTF]
 %   {
 %     \str_if_eq:nn, \str_if_eq:Vn, \str_if_eq:on, \str_if_eq:no,
-%     \str_if_eq:nV, \str_if_eq:VV
+%     \str_if_eq:nV, \str_if_eq:VV, \str_if_eq:vn, \str_if_eq:nv
 %   }
 %   \begin{syntax}
 %     \cs{str_if_eq_p:nn} \Arg{tl_1} \Arg{tl_2}
@@ -1088,7 +1088,7 @@
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 \prg_generate_conditional_variant:Nnn \str_if_eq:nn
-  { V , o , nV , no , VV } { p , T , F , TF }
+  { V , v , o , nV , no , VV , nv } { p , T , F , TF }
 \prg_new_conditional:Npnn \str_if_eq_x:nn #1#2 { p , T , F , TF }
   {
     \if_int_compare:w \@@_if_eq_x:nn {#1} {#2} = 0 \exp_stop_f:
