Missed a couple of Lua-specific functions

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2915,8 +2915,8 @@
   {
     \cs_new_protected:Npn \sys_shell_shipout:n #1
       {
-        \lua_shipout_x:n
-          { os.execute(" \lua_escape_x:n { \tl_to_str:n {#1} } ") }
+        \lua_shipout_e:n
+          { os.execute(" \lua_escape:e { \tl_to_str:n {#1} } ") }
       }
   }
   {
