--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -353,8 +353,8 @@
 %   tests whether \meta{string_2} is found inside \meta{string_1}.
 % \end{function}
 %
-% \begin{function}[added = 2013-07-24, updated = 2015-02-28, EXP, noTF]
-%   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv}
+% \begin{function}[added = 2013-07-24, updated = 2018-06-18, EXP, noTF]
+%   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv, \str_case:ee}
 %   \begin{syntax}
 %     \cs{str_case:nnTF} \Arg{test string} \\
 %     ~~|{| \\
@@ -376,32 +376,9 @@
 %   match then the \meta{false code} is inserted. The function
 %   \cs{str_case:nn}, which does nothing if there is no match, is also
 %   available.
-% \end{function}
 %
-% \begin{function}[added = 2013-07-24, EXP, noTF]{\str_case_x:nn}
-%   \begin{syntax}
-%     \cs{str_case_x:nnTF} \Arg{test string} \\
-%     ~~|{| \\
-%     ~~~~\Arg{string case_1} \Arg{code case_1} \\
-%     ~~~~\Arg{string case_2} \Arg{code case_2} \\
-%     ~~~~\ldots \\
-%     ~~~~\Arg{string case_n} \Arg{code case_n} \\
-%     ~~|}| \\
-%     ~~\Arg{true code}
-%     ~~\Arg{false code}
-%   \end{syntax}
-%   Compares the full expansion of the \meta{test string}
-%   in turn with the full expansion of the \meta{string cases}
-%   (all token lists are converted to strings).  If the two
-%   full expansions are equal (as described for \cs{str_if_eq:nnTF}) then the
-%   associated \meta{code} is left in the input stream
-%   and other cases are discarded.  If any of the
-%   cases are matched, the \meta{true code} is also inserted into the
-%   input stream (after the code for the appropriate case), while if none
-%   match then the \meta{false code} is inserted. The function
-%   \cs{str_case_x:nn}, which does nothing if there is no match, is also
-%   available.
-%   The \meta{test string} is expanded in each comparison, and must
+%   For technical reasons, in the \texttt{e}-type variant,
+%   the \meta{test string} is expanded in each comparison, and must
 %   always yield the same result: for example, random numbers must
 %   not be used within this string.
 % \end{function}
@@ -1137,10 +1114,10 @@
 % \end{macro}
 %
 % \begin{macro}[EXP, noTF]
-%   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv, \str_case_x:nn}
-% \begin{macro}[EXP]{\@@_case:nnTF, \@@_case_x:nnTF}
+%   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv, \str_case:ee}
+% \begin{macro}[EXP]{\@@_case:nnTF, \@@_case:eeTF}
 % \begin{macro}[EXP]
-%   {\@@_case:nw, \@@_case_x:nw, \@@_case_end:nw}
+%   {\@@_case:nw, \@@_case:ew, \@@_case_end:nw}
 %   Much the same as \cs[index=tl_case:nn]{tl_case:nn(TF)} here:
 %   just a change in the internal comparison.
 %    \begin{macrocode}
@@ -1175,33 +1152,33 @@
       { \@@_case_end:nw {#3} }
       { \@@_case:nw {#1} }
   }
-\cs_new:Npn \str_case_x:nn #1#2
+\cs_new:Npn \str_case:ee #1#2
   {
     \exp:w
-    \@@_case_x:nnTF {#1} {#2} { } { }
+    \@@_case:eeTF {#1} {#2} { } { }
   }
-\cs_new:Npn \str_case_x:nnT #1#2#3
+\cs_new:Npn \str_case:eeT #1#2#3
   {
     \exp:w
-    \@@_case_x:nnTF {#1} {#2} {#3} { }
+    \@@_case:eeTF {#1} {#2} {#3} { }
   }
-\cs_new:Npn \str_case_x:nnF #1#2
+\cs_new:Npn \str_case:eeF #1#2
   {
     \exp:w
-    \@@_case_x:nnTF {#1} {#2} { }
+    \@@_case:eeTF {#1} {#2} { }
   }
-\cs_new:Npn \str_case_x:nnTF #1#2
+\cs_new:Npn \str_case:eeTF #1#2
   {
     \exp:w
-    \@@_case_x:nnTF {#1} {#2}
+    \@@_case:eeTF {#1} {#2}
   }
-\cs_new:Npn \@@_case_x:nnTF #1#2#3#4
-  { \@@_case_x:nw {#1} #2 {#1} { } \q_mark {#3} \q_mark {#4} \q_stop }
-\cs_new:Npn \@@_case_x:nw #1#2#3
+\cs_new:Npn \@@_case:eeTF #1#2#3#4
+  { \@@_case:ew {#1} #2 {#1} { } \q_mark {#3} \q_mark {#4} \q_stop }
+\cs_new:Npn \@@_case:ew #1#2#3
   {
     \str_if_eq_x:nnTF {#1} {#2}
       { \@@_case_end:nw {#3} }
-      { \@@_case_x:nw {#1} }
+      { \@@_case:ew {#1} }
   }
 \cs_new:Npn \@@_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
   { \exp_end: #1 #4 }
@@ -1918,6 +1895,38 @@
 \cs_new_eq:NN \str_show:n \tl_show:n
 \cs_new_eq:NN \str_show:N \tl_show:N
 \cs_generate_variant:Nn \str_show:N { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Deprecated functions}
+%
+% \begin{macro}[EXP, deprecated = 2019-12-31, noTF]{\str_case_x:nn}
+%   For removal after 2019-12-31.
+%    \begin{macrocode}
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:ee }
+\cs_new:Npn \str_case_x:nn #1#2
+  {
+    \exp:w
+    \@@_case:eeTF {#1} {#2} { } { }
+  }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:eeT }
+\cs_new:Npn \str_case_x:nnT #1#2#3
+  {
+    \exp:w
+    \@@_case:eeTF {#1} {#2} {#3} { }
+  }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:eeF }
+\cs_new:Npn \str_case_x:nnF #1#2
+  {
+    \exp:w
+    \@@_case:eeTF {#1} {#2} { }
+  }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:eeTF }
+\cs_new:Npn \str_case_x:nnTF #1#2
+  {
+    \exp:w
+    \@@_case:eeTF {#1} {#2}
+  }
 %    \end{macrocode}
 % \end{macro}
 %
