Some \str_if_eq_x:nn(TF) to simple variants

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2191,7 +2191,7 @@ and all files in that bundle must be distributed together.
     \tl_greplace_all:Nno \g_@@_base_name_tl
       { ~ } { \c_catcode_other_space_tl }
     \seq_get:NN #1 \l_@@_tmpa_tl
-    \str_if_eq_x:nnTF { \l_@@_tmpa_tl } { \scan_stop: }
+    \str_if_eq:VnTF \l_@@_tmpa_tl { \scan_stop: }
       {
         \seq_gclear:N \g_@@_variants_seq
         \@@_names_typeset_auxii:x { \g_@@_base_name_tl }
@@ -2296,7 +2296,7 @@ and all files in that bundle must be distributed together.
         #1
           {
             \l_@@_tmpa_tl
-            \str_if_eq_x:nnF { \l_@@_tmpb_tl } { \scan_stop: }
+            \str_if_eq:VnF \l_@@_tmpb_tl { \scan_stop: }
               { : \l_@@_tmpb_tl }
             \bool_if:NT \l_@@_macro_TF_bool { TF }
           }
@@ -3983,7 +3983,7 @@ and all files in that bundle must be distributed together.
           \tl_if_empty:nTF {#3}
             { { } { } { } }
             {
-              \str_if_eq_x:nnTF {#3} { TeX }
+              \str_if_eq:nnTF {#3} { TeX }
                 {
                   { TeX~and~LaTeX2e }
                   { \string\TeX{}~and~\string\LaTeXe{} }
