--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1429,7 +1429,7 @@
     \seq_put_right:Nn \l_@@_class_loop_seq {#1}
     \prop_get:cnNT { l_@@_redirect_ #1 _prop } {#3} \l_@@_class_tl
       {
-        \str_if_eq_x:nnF { \l_@@_class_tl } {#1}
+        \str_if_eq:VnF \l_@@_class_tl {#1}
           {
             \tl_if_eq:NNTF \l_@@_class_tl \l_@@_current_class_tl
               {
