--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1034,10 +1034,10 @@
 %   but \cs{@@_split:NnTF} is non-expandable.
 %
 %   Instead, the key is compared to each key in turn using
-%   \cs{str_if_eq_x:nn}, which is expandable.  To terminate the mapping,
+%   \cs{str_if_eq:nn}, which is expandable.  To terminate the mapping,
 %   we append to the property list the key that is searched for.  This
 %   second \cs{tl_to_str:n} is not expanded at the start, but only when
-%   included in the \cs{str_if_eq_x:nn}.  It cannot make the breaking
+%   included in the \cs{str_if_eq:nn}.  It cannot make the breaking
 %   mechanism choke, because the arbitrary token list material is
 %   enclosed in braces.  The second argument of \cs{@@_if_in:nwwn} is
 %   most often empty.  When the \meta{key} is found in the list,
@@ -1058,7 +1058,7 @@
   }
 \cs_new:Npn \@@_if_in:nwwn #1#2 \@@_pair:wn #3 \s_@@ #4
   {
-    \str_if_eq_x:nnTF {#1} {#3}
+    \str_if_eq:nnTF {#1} {#3}
       { \@@_if_in:N }
       { \@@_if_in:nwwn {#1} }
   }
