Rename \str_if_eq_x:nn(TF) as \str_if_eq:ee(TF)

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1173,7 +1173,7 @@
   }
 \cs_new_protected:Npn \@@_par_aux:N #1
   {
-    \str_if_eq_x:nnF {#1} { \s_@@_par_omit }
+    \str_if_eq:nnF {#1} { \s_@@_par_omit }
       {
         \@@_par_auxii:
         #1
