--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -6468,7 +6468,7 @@
   { Missing~right~brace~inserted~for~'\iow_char:N\\u'~escape. }
   {
     LaTeX~
-    \str_if_eq_x:nnTF { } {#2}
+    \str_if_eq:eeTF { } {#2}
       { reached~the~end~of~the~string~ }
       { encountered~an~escaped~alphanumeric~character '\iow_char:N\\#2'~ }
     when~parsing~the~argument~of~an~
@@ -6628,7 +6628,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_msg_repeated:nnN #1#2#3
   {
-    \str_if_eq_x:nnF { #1 #2 } { 1 0 }
+    \str_if_eq:eeF { #1 #2 } { 1 0 }
       {
         , ~ repeated ~
         \int_case:nnF {#2}
