--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -302,10 +302,11 @@
 %   in the same order.
 % \end{function}
 %
-% \begin{function}[EXP,pTF]
+% \begin{function}[EXP,pTF, updated  = 2018-06-18]
 %   {
 %     \str_if_eq:nn, \str_if_eq:Vn, \str_if_eq:on, \str_if_eq:no,
-%     \str_if_eq:nV, \str_if_eq:VV, \str_if_eq:vn, \str_if_eq:nv
+%     \str_if_eq:nV, \str_if_eq:VV, \str_if_eq:vn, \str_if_eq:nv,
+%     \str_if_eq:ee
 %   }
 %   \begin{syntax}
 %     \cs{str_if_eq_p:nn} \Arg{tl_1} \Arg{tl_2}
@@ -317,21 +318,6 @@
 %   characters in the same order. Thus for example
 %   \begin{verbatim}
 %     \str_if_eq_p:no { abc } { \tl_to_str:n { abc } }
-%   \end{verbatim}
-%   is logically \texttt{true}.
-% \end{function}
-%
-% \begin{function}[EXP,pTF, added = 2012-06-05]{\str_if_eq_x:nn}
-%   \begin{syntax}
-%     \cs{str_if_eq_x_p:nn} \Arg{tl_1} \Arg{tl_2}
-%     \cs{str_if_eq_x:nnTF} \Arg{tl_1} \Arg{tl_2} \Arg{true code} \Arg{false code}
-%   \end{syntax}
-%   Fully expands the two \meta{token lists} and converts them to \meta{strings}, then
-%   compares these on a character by character basis:
-%   it is \texttt{true} if the two \meta{strings} contain the same
-%   characters in the same order. Thus for example
-%   \begin{verbatim}
-%     \str_if_eq_x_p:nn { abc } { \tl_to_str:n { abc } }
 %   \end{verbatim}
 %   is logically \texttt{true}.
 % \end{function}
@@ -1006,7 +992,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\@@_if_eq_x:nn}
+% \begin{macro}[EXP]{\@@_if_eq:nn}
 % \begin{macro}[EXP]{\@@_escape:n}
 %   String comparisons rely on the primitive \cs[index=pdfstrcmp]{(pdf)strcmp} if available:
 %   \LuaTeX{} does not have it, so emulation is required. As the net result
@@ -1016,16 +1002,16 @@
 %   the necessary Lua code is loaded in \pkg{l3boostrap}.
 %   The need to detokenize and force
 %   expansion of input arises from the case where a |#| token is used in the
-%   input, \emph{e.g.}~|\__str_if_eq_x:nn {#} { \tl_to_str:n {#} }|, which
+%   input, \emph{e.g.}~|\__str_if_eq:nn {#} { \tl_to_str:n {#} }|, which
 %   otherwise would fail as \cs{tex_luaescapestring:D} does not double
 %   such tokens.
 %    \begin{macrocode}
-\cs_new:Npn \@@_if_eq_x:nn #1#2 { \tex_strcmp:D {#1} {#2} }
+\cs_new:Npn \@@_if_eq:nn #1#2 { \tex_strcmp:D {#1} {#2} }
 \cs_if_exist:NT \tex_luatexversion:D
    {
      \cs_set_eq:NN \lua_escape:e \tex_luaescapestring:D
      \cs_set_eq:NN \lua_now:e    \tex_directlua:D
-     \cs_set:Npn \@@_if_eq_x:nn #1#2
+     \cs_set:Npn \@@_if_eq:nn #1#2
        {
           \lua_now:e
             {
@@ -1050,7 +1036,7 @@
 %   {
 %     \str_if_eq:nn, \str_if_eq:Vn, \str_if_eq:on, \str_if_eq:nV,
 %     \str_if_eq:no, \str_if_eq:VV,
-%     \str_if_eq_x:nn
+%     \str_if_eq:ee
 %   }
 %   Modern engines provide a direct way of comparing two token lists,
 %   but returning a number. This set of conditionals therefore make life
@@ -1060,15 +1046,15 @@
 \prg_new_conditional:Npnn \str_if_eq:nn #1#2 { p , T , F , TF }
   {
     \if_int_compare:w
-      \@@_if_eq_x:nn { \exp_not:n {#1} } { \exp_not:n {#2} }
+      \@@_if_eq:nn { \exp_not:n {#1} } { \exp_not:n {#2} }
       = 0 \exp_stop_f:
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 \prg_generate_conditional_variant:Nnn \str_if_eq:nn
   { V , v , o , nV , no , VV , nv } { p , T , F , TF }
-\prg_new_conditional:Npnn \str_if_eq_x:nn #1#2 { p , T , F , TF }
+\prg_new_conditional:Npnn \str_if_eq:ee #1#2 { p , T , F , TF }
   {
-    \if_int_compare:w \@@_if_eq_x:nn {#1} {#2} = 0 \exp_stop_f:
+    \if_int_compare:w \@@_if_eq:nn {#1} {#2} = 0 \exp_stop_f:
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 %    \end{macrocode}
@@ -1082,7 +1068,7 @@
 \prg_new_conditional:Npnn \str_if_eq:NN #1#2 { p , TF , T , F }
   {
     \if_int_compare:w
-      \@@_if_eq_x:nn { \tl_to_str:N #1 } { \tl_to_str:N #2 }
+      \@@_if_eq:nn { \tl_to_str:N #1 } { \tl_to_str:N #2 }
       = 0 \exp_stop_f: \prg_return_true: \else: \prg_return_false: \fi:
   }
 \prg_generate_conditional_variant:Nnn \str_if_eq:NN
@@ -1176,7 +1162,7 @@
   { \@@_case:ew {#1} #2 {#1} { } \q_mark {#3} \q_mark {#4} \q_stop }
 \cs_new:Npn \@@_case:ew #1#2#3
   {
-    \str_if_eq_x:nnTF {#1} {#2}
+    \str_if_eq:eeTF {#1} {#2}
       { \@@_case_end:nw {#3} }
       { \@@_case:ew {#1} }
   }
@@ -1901,6 +1887,7 @@
 % \subsection{Deprecated functions}
 %
 % \begin{macro}[EXP, deprecated = 2019-12-31, noTF]{\str_case_x:nn}
+% \begin{macro}[EXP, deprecated = 2019-12-31, pTF]{\str_if_eq_x:nn}
 %   For removal after 2019-12-31.
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:ee }
@@ -1927,6 +1914,14 @@
     \exp:w
     \@@_case:eeTF {#1} {#2}
   }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_if_eq_p:ee }
+\cs_new:Npn \str_if_eq_x_p:nn { \str_if_eq_p:ee }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_if_eq:eeT }
+\cs_new:Npn \str_if_eq_x:nnT { \str_if_eq:eeT }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_if_eq:eeF }
+\cs_new:Npn \str_if_eq_x:nnF { \str_if_eq:eeF }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_if_eq:eeTF }
+\cs_new:Npn \str_if_eq_x:nnTF { \str_if_eq:eeTF }
 %    \end{macrocode}
 % \end{macro}
 %
