--- a/l3kernel/l3unicode.dtx
+++ b/l3kernel/l3unicode.dtx
@@ -163,7 +163,7 @@
         {
           \tl_if_blank:nF {#1}
             {
-              \str_if_eq_x:nnF { \tl_head:n {#1} } { \c_hash_str }
+              \str_if_eq:eeF { \tl_head:n {#1} } { \c_hash_str }
                 { \@@_data_auxi:w #1 \q_stop }
             }
         }
@@ -205,9 +205,9 @@
         {
           \tl_if_blank:nF {#1}
             {
-              \str_if_eq_x:nnTF { \tl_head:n {#1} } { \c_hash_str }
+              \str_if_eq:eeTF { \tl_head:n {#1} } { \c_hash_str }
                 {
-                  \str_if_eq_x:nnT
+                  \str_if_eq:eeT
                     {#1}
                     { \c_hash_str \c_space_tl Conditional~Mappings }
                     { \ior_map_break: }
