--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1339,7 +1339,7 @@
       {
         \check_is_function:N #1
         \check_is_function:N #2
-        \str_if_eq_x:nnF { \check_signature:N #2 } { Npn }
+        \str_if_eq:eeF { \check_signature:N #2 } { Npn }
           {
             \@@_error:nnnn { bad-signature }
               { \cs_generate_from_arg_count:NNnn } { Npn } {#1}
