--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -1238,17 +1238,17 @@
 %
 % \subsection{Fast string comparison}
 %
-% \begin{macro}{\@@_str_if_eq_x:nn}
+% \begin{macro}{\@@_str_if_eq:nn}
 %   A private version of the low-level string comparison function. As
 %   the nature of the arguments is restricted and as speed is of the essence,
 %   this version does not seek to deal with |#| tokens.
 %   No \pkg{l3sys} or \pkg{l3luatex} just yet so we have to define in terms of
 %   primitives.
 %    \begin{macrocode}
-\cs_new:Npn \@@_str_if_eq_x:nn #1#2 { \tex_strcmp:D {#1} {#2} }
+\cs_new:Npn \@@_str_if_eq:nn #1#2 { \tex_strcmp:D {#1} {#2} }
 \sys_if_engine_luatex:T
   {
-    \cs_set:Npn \@@_str_if_eq_x:nn #1#2
+    \cs_set:Npn \@@_str_if_eq:nn #1#2
       {
         \tex_directlua:D
           {
