--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1942,7 +1942,7 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \skip_if_eq:nn #1#2 { p , T , F , TF }
   {
-    \str_if_eq_x:nnTF { \skip_eval:n { #1 } } { \skip_eval:n { #2 } }
+    \str_if_eq:eeTF { \skip_eval:n { #1 } } { \skip_eval:n { #2 } }
        { \prg_return_true: }
        { \prg_return_false: }
   }
