--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1957,7 +1957,7 @@
 %   function cannot be defined on the fly because tests must remain
 %   expandable): instead the first argument of the auxiliary (plus the
 %   delimiter to avoid complications with trailing spaces) is compared
-%   using \cs{str_if_eq_x:nnTF} to the result of applying
+%   using \cs{str_if_eq:eeTF} to the result of applying
 %   \cs{token_to_str:N} to a control sequence.  Second, the
 %   \tn{meaning} of primitives such as \tn{dimen} or \tn{dimendef}
 %   starts in the same way as registers such as
@@ -2005,7 +2005,7 @@
                 \exp_not:N \prg_return_false:
                 \exp_not:N \else:
               }
-            \exp_not:N \str_if_eq_x:nnTF
+            \exp_not:N \str_if_eq:eeTF
               {
                 \exp_not:N \exp_after:wN
                 \exp_not:c { @@_delimit_by_ #2 :w }
