--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -2421,7 +2421,7 @@
   }
 \cs_new_protected:Npn \@@_compile_quantifier_braced_auxi:w #1#2
   {
-    \str_case:eeF { #1 #2 }
+    \str_case_e:nnF { #1 #2 }
       {
         { \@@_compile_special:N \c_right_brace_str }
           {
