--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -1547,7 +1547,7 @@
                   { \@@_unescape_string_repeat:NNNNNN ?? }
               }
               {
-                \str_case:eeF {#2}
+                \str_case_e:nnF {#2}
                   {
                     { \c_backslash_str } { 134 }
                     { ( } { 50 }
