Correct deprecation code

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1913,14 +1913,14 @@
 % \begin{macro}[EXP, deprecated = 2019-12-31, pTF]{\str_if_eq_x:nn}
 %   For removal after 2019-12-31.
 %    \begin{macrocode}
-\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:ee }
-\cs_new:Npn \str_case_x:nn { \str_case:ee }
-\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:eeT }
-\cs_new:Npn \str_case_x:nnT { \str_case:eeT }
-\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:eeT }
-\cs_new:Npn \str_case_x:nnF { \str_case:eeF }
-\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case:eeTF }
-\cs_new:Npn \str_case_x:nnTF { \str_case:eeTF }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case_e:nn }
+\cs_new:Npn \str_case_x:nn { \str_case_e:nn }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case_e:nnT }
+\cs_new:Npn \str_case_x:nnT { \str_case_e:nnT }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case_e:nnF }
+\cs_new:Npn \str_case_x:nnF { \str_case_e:nnF }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_case_e:nnTF }
+\cs_new:Npn \str_case_x:nnTF { \str_case_e:nnTF }
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_if_eq_p:ee }
 \cs_new:Npn \str_if_eq_x_p:nn { \str_if_eq_p:ee }
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \str_if_eq:eeT }
