--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3035,6 +3035,7 @@
 %   }
 % \begin{macro}{\@@_set_from_file:NNnn}
 % \begin{macro}{\@@_from_file_do:w}
+% \begin{macro}{\@@_set_from_:nNNn}
 %   The approach here is similar to that for doing a rescan, and so the same
 %   internals can be reused. Thus the plan is to insert a pair of tokens of
 %   the same charcode but different catcodes after the file has been read.
@@ -3053,22 +3054,29 @@
     \str_if_empty:NTF \l_@@_file_name_str
       { \__kernel_file_missing:n {#4} }
       {
-        \group_begin:
-          \exp_args:No \tex_everyeof:D
-            { \c_@@_rescan_marker_tl \exp_not:N }
-          #3 \scan_stop:
-          \exp_after:wN \@@_from_file_do:w
-          \exp_after:wN \prg_do_nothing:
-            \tex_input:D \l_@@_file_name_str \scan_stop:
-        \exp_args:NNNo \group_end:
-        #1 #2 \l_@@_internal_a_tl
+        \exp_args:NV \@@_set_from:nNNn
+          \l_@@_file_name_str
+          #1 #2 {#3}
       }
   }
 \exp_args:Nno \use:nn
   { \cs_new_protected:Npn \@@_from_file_do:w #1 }
   { \c_@@_rescan_marker_tl }
   { \tl_set:No \l_@@_internal_a_tl {#1} }
+\cs_new_protected:Npn \@@_set_from:nNNn #1#2#3#4
+  {
+    \group_begin:
+      \exp_args:No \tex_everyeof:D
+        { \c_@@_rescan_marker_tl \exp_not:N }
+      #4 \scan_stop:
+      \exp_after:wN \@@_from_file_do:w
+      \exp_after:wN \prg_do_nothing:
+        \tex_input:D #1 \scan_stop:
+    \exp_args:NNNo \group_end:
+    #2 #3 \l_@@_internal_a_tl
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -3079,6 +3087,7 @@
 %     \tl_gset_from_file_x:Nnn, \tl_gset_from_file_x:cnn
 %   }
 % \begin{macro}{\@@_set_from_file_x:NNnn}
+% \begin{macro}{\@@_set_from_x:nNNn}
 %   When reading a file and allowing expansion of the content, the set up
 %   only needs to prevent \TeX{} complaining about the end of the file. That
 %   is done simply, with a group then used to trap the definition needed.
@@ -3097,16 +3106,23 @@
     \str_if_empty:NTF \l_@@_file_name_str
       { \__kernel_file_missing:n {#4} }
       {
-        \group_begin:
-          \tex_everyeof:D { \exp_not:N }
-          #3 \scan_stop:
-          \tl_set:Nx \l_@@_internal_a_tl
-            { \tex_input:D \l_@@_file_name_str \c_space_token }
-        \exp_args:NNNo \group_end:
-        #1 #2 \l_@@_internal_a_tl
+        \exp_args:NV \@@_set_from_x:nNNn
+          \l_@@_file_name_str
+          #1 #2 {#3}
       }
   }
+\cs_new_protected:Npn \@@_set_from_x:nNNn #1#2#3#4
+  {
+    \group_begin:
+      \tex_everyeof:D { \exp_not:N }
+      #4 \scan_stop:
+      \tl_set:Nx \l_@@_internal_a_tl
+        { \tex_input:D #1 \c_space_token }
+    \exp_args:NNNo \group_end:
+    #2 #3 \l_@@_internal_a_tl
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \begin{variable}{\l_@@_file_name_str}
@@ -3114,6 +3130,9 @@
 \str_new:N \l_@@_file_name_str
 %    \end{macrocode}
 % \end{variable}
+%
+%    \begin{macrocode}
+%    \end{macrocode}
 %
 % \subsubsection{Unicode case changing}
 %
