--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1212,6 +1212,21 @@
 %   argument.
 % \end{function}
 %
+% \begin{function}[added = 2018-07-23]
+%   {
+%     \tl_set_from_shell:Nnn,  \tl_set_from_file:cnn,
+%     \tl_gset_from_shell:Nnn, \tl_gset_from_shell:cnn
+%   }
+%   \begin{syntax}
+%     \cs{tl_set_from_shell:Nnn} \meta{tl~var} \Arg{setup} \Arg{shell~command}
+%   \end{syntax}
+%   Defines \meta{tl} to the text returned by the \meta{shell command}.
+%   Category codes may need to be set appropriately via the \meta{setup}
+%   argument. If shell escape is disabled, the \meta{tl~var} will be empty.
+%   Note that quote characters (|"|) \emph{cannot} be used inside the
+%   \meta{shell command}.
+% \end{function}
+%
 % \begin{function}[EXP, added = 2016-12-06]
 %   {\tl_rand_item:N, \tl_rand_item:c, \tl_rand_item:n}
 %   \begin{syntax}
@@ -3131,8 +3146,41 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{macro}
+%   {
+%     \tl_set_from_shell:Nnn, \tl_set_from_shell:cnn,
+%     \tl_gset_from_shell:Nnn, \tl_gset_from_shell:cnn
+%   }
+% \begin{macro}{\@@_set_from_shell:NNnn}
+%   Setting using a shell is at this level just a slightly specialised file
+%   operation.
 %    \begin{macrocode}
+\cs_new_protected:Npn \tl_set_from_shell:Nnn
+  { \@@_set_from_shell:NNnn \tl_set:Nn }
+\cs_generate_variant:Nn \tl_set_from_shell:Nnn { c }
+\cs_new_protected:Npn \tl_gset_from_shell:Nnn
+  { \@@_set_from_shell:NNnn \tl_gset:Nn }
+\cs_generate_variant:Nn \tl_gset_from_shell:Nnn { c }
+\cs_new_protected:Npn \@@_set_from_shell:NNnn #1#2#3#4
+  {
+    \sys_if_shell:TF
+      {
+        \tl_set:Nn \l_@@_internal_a_tl {#4}
+        \tl_if_in:NnTF \l_@@_internal_a_tl { " }
+          {
+            \__kernel_msg_error:nnx
+              { kernel } { quote-in-shell } {#4}
+          }
+          { \@@_set_from:nNNn { | " #4 " } #1 #2 {#3} }
+      }
+      { #1 #2 { } }
+  }
+\__kernel_msg_new:nnnn { kernel } { quote-in-shell }
+  { Quotes~in~shell~command~'#1'. }
+  { Shell~commands~cannot~contain~quotes~("). }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 %
 % \subsubsection{Unicode case changing}
 %
