--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1214,7 +1214,7 @@
 %
 % \begin{function}[added = 2018-07-23]
 %   {
-%     \tl_set_from_shell:Nnn,  \tl_set_from_file:cnn,
+%     \tl_set_from_shell:Nnn,  \tl_set_from_shell:cnn,
 %     \tl_gset_from_shell:Nnn, \tl_gset_from_shell:cnn
 %   }
 %   \begin{syntax}
