--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2898,6 +2898,64 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\c_sys_platform_str}
+%   Detecting the platform on \LuaTeX{} is easy: for other engines, we use
+%   the fact that the two common cases have special null files. It is possible
+%   to probe further (see package \pkg{platform}), but that requires shell
+%   escape and seems unlikely to be useful.
+%    \begin{macrocode}
+\sys_if_engine_luatex:TF
+  {
+    \str_const:Nx \c_sys_platform_str
+      { \lua_now:n { tex.print(os.type) } }
+  }
+  {
+    \file_if_exist:nTF { nul: }
+      {
+        \file_if_exist:nF { /dev/null }
+          { \str_const:Nn \c_sys_platform_str { windows } }
+      }
+      {
+        \file_if_exist:nT { /dev/null }
+          { \str_const:Nn \c_sys_platform_str { unix } }
+      }
+  }
+\cs_if_exist:NF \c_sys_platform_str
+  { \str_const:Nn \c_sys_platform_str { unknown }  }
+%    \end{macrocode}
+% \end{variable}
+% \begin{macro}[pTF]{\sys_if_platform_unix:}
+% \begin{macro}[pTF]{\sys_if_platform_windows:}
+%   We can now set up the tests.
+%    \begin{macrocode}
+\cs_new_eq:NN \sys_if_platform_unix:T \use_none:n
+\cs_new_eq:NN \sys_if_platform_unix:F \use:n
+\cs_new_eq:NN \sys_if_platform_unix:TF \use_ii:nn
+\cs_new_eq:NN \sys_if_platform_unix_p: \c_false_bool
+\cs_new_eq:NN \sys_if_platform_windows:T \use_none:n
+\cs_new_eq:NN \sys_if_platform_windows:F \use:n
+\cs_new_eq:NN \sys_if_platform_windows:TF \use_ii:nn
+\cs_new_eq:NN \sys_if_platform_windows_p: \c_false_bool
+\str_if_eq:VnTF \c_sys_platform_str { unix }
+  {
+    \cs_set_eq:NN \sys_if_platform_unix:T \use:n
+    \cs_set_eq:NN \sys_if_platform_unix:F \use_none:n
+    \cs_set_eq:NN \sys_if_platform_unix:TF \use_i:nn
+    \cs_set_eq:NN \sys_if_platform_unix_p: \c_true_bool
+  }
+  {
+    \str_if_eq:VnT \c_sys_platform_str { windows }
+      {
+        \cs_set_eq:NN \sys_if_platform_windows:T \use:n
+        \cs_set_eq:NN \sys_if_platform_windows:F \use_none:n
+        \cs_set_eq:NN \sys_if_platform_windows:TF \use_i:nn
+        \cs_set_eq:NN \sys_if_platform_windows_p: \c_true_bool
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \begin{macro}[EXP, pTF]{\sys_if_shell:, \sys_if_shell_unrestricted:, \sys_if_shell_restricted:}
 %   Performs a check for whether shell escape is enabled.  The first set
 %   of functions returns true if either of restricted or unrestricted
