--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2928,29 +2928,10 @@
 % \begin{macro}[pTF]{\sys_if_platform_windows:}
 %   We can now set up the tests.
 %    \begin{macrocode}
-\cs_new_eq:NN \sys_if_platform_unix:T \use_none:n
-\cs_new_eq:NN \sys_if_platform_unix:F \use:n
-\cs_new_eq:NN \sys_if_platform_unix:TF \use_ii:nn
-\cs_new_eq:NN \sys_if_platform_unix_p: \c_false_bool
-\cs_new_eq:NN \sys_if_platform_windows:T \use_none:n
-\cs_new_eq:NN \sys_if_platform_windows:F \use:n
-\cs_new_eq:NN \sys_if_platform_windows:TF \use_ii:nn
-\cs_new_eq:NN \sys_if_platform_windows_p: \c_false_bool
-\str_if_eq:VnTF \c_sys_platform_str { unix }
+\clist_map_inline:nn { unix , windows }
   {
-    \cs_set_eq:NN \sys_if_platform_unix:T \use:n
-    \cs_set_eq:NN \sys_if_platform_unix:F \use_none:n
-    \cs_set_eq:NN \sys_if_platform_unix:TF \use_i:nn
-    \cs_set_eq:NN \sys_if_platform_unix_p: \c_true_bool
-  }
-  {
-    \str_if_eq:VnT \c_sys_platform_str { windows }
-      {
-        \cs_set_eq:NN \sys_if_platform_windows:T \use:n
-        \cs_set_eq:NN \sys_if_platform_windows:F \use_none:n
-        \cs_set_eq:NN \sys_if_platform_windows:TF \use_i:nn
-        \cs_set_eq:NN \sys_if_platform_windows_p: \c_true_bool
-      }
+    \@@_const:nn { sys_if_platform_ #1 }
+      { \str_if_eq_p:Vn \c_sys_platform_str { #1 } }
   }
 %    \end{macrocode}
 % \end{macro}
