Internal function for shell operations

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2999,6 +2999,39 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\@@_path_to_win:n}
+% \begin{macro}[EXP]{\@@_path_to_win:w}
+% \begin{macro}[EXP]{\@@_path_to_win:N}
+%   A simple expandable search-and-replace for providing Windows-style paths.
+%    \begin{macrocode}
+\cs_new:Npn \@@_path_to_win:n #1
+  {
+    \exp_after:wN \@@_path_to_win:w \tl_to_str:n {#1} ~ \q_stop
+  }
+\cs_new:Npn \@@_path_to_win:w #1 ~ #2 \q_stop
+  {
+    \@@_path_to_win:N #1 \q_nil
+    \tl_if_empty:nF {#2}
+      {
+        \c_space_tl
+        \@@_path_to_win:w #2 \q_stop
+      }
+  }
+\cs_new:Npn \@@_path_to_win:N #1
+  {
+    \quark_if_nil:NF #1
+      {
+        \token_if_eq_meaning:NNTF #1 /
+          { \c_backslash_str }
+          {#1}
+         \@@_path_to_win:N
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Additions to \pkg{l3tl}}
 %
 %    \begin{macrocode}
