--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3128,6 +3128,7 @@
 % \end{macro}
 %
 % \begin{macro}{\sys_shell_ren:nnn}
+% \begin{macro}{\@@_shell_ren:nnn}
 %   The differences in syntax between Unix and Windows mean that it's not easy
 %   to provide |mv|: instead we go with |ren|-like syntax but with arguments
 %   set up to work with Unix too.
@@ -3136,19 +3137,30 @@
   {
     \sys_if_shell_unrestricted:T
       {
-        \sys_shell_now:x
+        \exp_not:N \tl_if_blank:n {#1}
+          { \exp_not:N \@@_shell_ren:nnn { . } }
+          { \exp_not:N \@@_shell_ren:nnn {#1} }
+            {#2} {#3}
+      }
+  }
+\cs_new_protected:Npx \@@_shell_ren:nnn #1#2#3
+  {
+    \sys_shell_now:x
+      {
+         \sys_if_platform_unix:T
+          { 
+            mv~-f~ \exp_not:N \tl_to_str:n { #1 / #2 } ~
+              \exp_not:N \tl_to_str:n { #1 / #3 }
+          }
+        \sys_if_platform_windows:T
           {
-            \sys_if_platform_unix:T
-              { mv~-f~ \tl_to_str:n { #1 / #2 } ~ \tl_to_str:n { #1 / #3 } }
-            \sys_if_platform_windows:T
-              {
-                ren~ \exp_not:N \@@_path_to_win:n { #1 / #2 } ~
-                  \exp_not:N \tl_to_str:n {#3}
-              }
+            ren~ \exp_not:N \@@_path_to_win:n { #1 / #2 } ~
+              \exp_not:N \tl_to_str:n {#3}
           }
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\sys_shell_rm:n}
