--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1012,6 +1012,16 @@
 %   attempted.
 % \end{function}
 %
+% \begin{function}[added = 2018-07-28]{\sys_shell_get_pwd:N}
+%   \begin{syntax}
+%     \cs{sys_shell_get_pwd:N} \Arg{str var}
+%   \end{syntax}
+%   Sets the \meta{str var} to the present working directory (the output of
+%   |pwd| on Unix or |cd| on Windows). Note that on Windows this will contain
+%   string backslash chars (|\|).  If unrestricted shell escape is not
+%   enabled, no action is taken.
+% \end{function}
+%
 % \section{Additions to \pkg{l3tl}}
 %
 % \begin{function}[EXP,pTF]{\tl_if_single_token:n}
@@ -3201,6 +3211,41 @@
             \sys_if_platform_windows:T
               { rmdir~/s~/q~ \exp_not:N \@@_path_to_win:n {#1} }
           }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{variable}{\l_@@_tmp_tl}
+%   Scratch space.
+%    \begin{macrocode}
+\tl_new:N \l_@@_tmp_tl
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\sys_shell_get_pwd:N}
+%   Getting the path is easy: the main work is avoiding loosing any
+%   information. (This information can be obtained using the recorder file:
+%   that does not require shell escape. However, it's hard to see how it might
+%   be useful without the other file functions.)
+%    \begin{macrocode}
+\cs_new_protected:Npx \sys_shell_get_pwd:N #1
+  {
+    \sys_if_shell_unrestricted:T
+      {
+        \exp_not:N \tl_set_from_shell:Nnn \exp_not:N \l_@@_tmp_tl
+          {
+            \char_set_catcode_other:N \exp_not:N \\
+            \char_set_catcode_other:N \exp_not:N \#
+            \char_set_catcode_other:N \exp_not:N \~
+            \char_set_catcode_other:N \exp_not:N \%
+            \char_set_catcode_space:N \exp_not:N \ %
+          }
+          {
+            \sys_if_platform_unix:T { pwd }
+            \sys_if_platform_windows:T { cd }
+          }
+        \str_set:NV #1 \exp_not:N \l_@@_tmp_tl
       }
   }
 %    \end{macrocode}
