\sys_shell_mv:nn rather than \sys_shell_ren:nnn

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -985,13 +985,13 @@
 %   attempted.
 % \end{function}
 %
-% \begin{function}[added = 2018-07-27]{\sys_shell_ren:nnn}
+% \begin{function}[added = 2018-07-28]{\sys_shell_mv:nn}
 %   \begin{syntax}
-%     \cs{sys_shell_ren:nnn} \Ag{path} \Arg{old} \Arg{new}
+%     \cs{sys_shell_mv:nn} \Arg{old} \Arg{new}
 %   \end{syntax}
-%   Renames the files in the meta{\path} from the \meta{old} to \meta{new}
-%   name (which may include wildcards). The \meta{path} should be specified using
-%   |/| as a path separator.  If unrestricted shell escape is not enabled, no
+%   Moves the files from the \meta{old} to \meta{new} names/locations: the
+%   \meta{old} names may include wildcards. In both arguments, |/| should be
+%   used as the path separator.  If unrestricted shell escape is not enabled, no
 %   action is attempted.
 % \end{function}
 %
@@ -3141,40 +3141,32 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\sys_shell_ren:nnn}
-% \begin{macro}{\@@_shell_ren:nnn}
-%   The differences in syntax between Unix and Windows mean that it's not easy
-%   to provide |mv|: instead we go with |ren|-like syntax but with arguments
-%   set up to work with Unix too.
+% \begin{macro}{\sys_shell_mv:nn}
+%   On Windows we do not have a single |mv| operation, so copy-and-delete
+%   instead.
 %    \begin{macrocode}
-\cs_new_protected:Npx \sys_shell_ren:nnn #1#2#3
+\cs_new_protected:Npx \sys_shell_mv:nn #1#2
   {
     \sys_if_shell_unrestricted:T
       {
-        \exp_not:N \tl_if_blank:nTF {#1}
-          { \exp_not:N \@@_shell_ren:nnn { . } }
-          { \exp_not:N \@@_shell_ren:nnn {#1} }
-            {#2} {#3}
-      }
-  }
-\cs_new_protected:Npx \@@_shell_ren:nnn #1#2#3
-  {
-    \sys_shell_now:x
-      {
-         \sys_if_platform_unix:T
-          { 
-            mv~-f~ \exp_not:N \tl_to_str:n { #1 / #2 } ~
-              \exp_not:N \tl_to_str:n { #1 / #3 }
-          }
-        \sys_if_platform_windows:T
+        \sys_shell_now:x
           {
-            ren~ \exp_not:N \@@_path_to_win:n { #1 / #2 } ~
-              \exp_not:N \tl_to_str:n {#3}
+            \sys_if_platform_unix:T
+              {
+                mv~ \exp_not:N \tl_to_str:n {#1} ~
+                  \exp_not:N \tl_to_str:n {#2}
+              }
+            \sys_if_platform_windows:T
+              {
+                copy~/y~ \exp_not:N \@@_path_to_win:n {#1} ~
+                  \exp_not:N \@@_path_to_win:n {#2}
+                  \token_to_str:N & \token_to_str:N &
+                  del~/f~/q~\exp_not:N \@@_path_to_win:n {#1}
+              }
           }
       }
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\sys_shell_rm:n}
