--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1023,6 +1023,16 @@
 %   enabled, no action is taken.
 % \end{function}
 %
+% \begin{function}[added = 2018-07-28]{\sys_shell_split_ls:nN}
+%   \begin{syntax}
+%     \cs{sys_shell_split_ls:N} \Arg{glob} \meta{seq}
+%   \end{syntax}
+%   Sets the \meta{seq var} to contain one entry per directory listing
+%   (equivalent to |ls -1| or |dir /b|) as specified by the \meta{glob}: the
+%   entries are strings. If unrestricted shell is not enabled, no action is
+%   taken.
+% \end{function}
+%
 % \section{Additions to \pkg{l3tl}}
 %
 % \begin{function}[EXP,pTF]{\tl_if_single_token:n}
@@ -3239,6 +3249,38 @@
             \sys_if_platform_windows:T { cd }
           }
         \str_set:NV #1 \exp_not:N \l_@@_tmp_tl
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\sys_shell_split_ls:nN}
+%   Getting a one-per-line listing is easy enough. We need to set
+%   \cs{ExplSyntaxOff} as that deals with the end-of-line character. After that,
+%   just a case of tidying up. The listing always ends in |^^M| so there is an
+%   extra entry to trim.
+%    \begin{macrocode}
+\cs_new_protected:Npx \sys_shell_split_ls:nN #1#2
+  {
+    \sys_if_shell_unrestricted:T
+      {
+        \exp_not:N \tl_set_from_shell:Nnn \exp_not:N \l_@@_tmp_tl
+          {
+            \ExplSyntaxOff
+            \char_set_catcode_other:N \exp_not:N \\
+            \char_set_catcode_other:N \exp_not:N \#
+            \char_set_catcode_other:N \exp_not:N \~
+            \char_set_catcode_other:N \exp_not:N \%
+            \char_set_catcode_other:n { 13 }
+          }
+          {
+            \sys_if_platform_unix:T { ls~-1~ #1 }
+            \sys_if_platform_windows:T { dir~/b~ #1 }
+          }
+        \str_set:NV \exp_not:N \l_@@_tmp_tl \exp_not:N \l_@@_tmp_tl
+        \seq_set_split:NnV #2 { \char_generate:nn { `\^^M } { 12 } }
+          \exp_not:N \l_@@_tmp_tl
+        \seq_pop_right:NN #2 \exp_not:N \l_@@_tmp_tl
       }
   }
 %    \end{macrocode}
