--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1015,7 +1015,7 @@
 %
 % \begin{function}[added = 2018-07-28]{\sys_shell_get_pwd:N}
 %   \begin{syntax}
-%     \cs{sys_shell_get_pwd:N} \Arg{str var}
+%     \cs{sys_shell_get_pwd:N} \meta{str var}
 %   \end{syntax}
 %   Sets the \meta{str var} to the present working directory (the output of
 %   |pwd| on Unix or |cd| on Windows). Note that on Windows this will contain
