Comments updated [ci skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -346,7 +346,7 @@
 %   If found, sets the \meta{str var} to the size of the file in bytes.
 %   Where the file is not found, the \meta{str var} will be empty.
 %   \begin{texnote}
-%     The \XeTeX{} engine provides no way to implement this function.
+%     Currently this is not available with \XeTeX{}.
 %   \end{texnote}
 % \end{function}
 %
@@ -362,7 +362,7 @@
 %   (UTC) or \meta{plus-minus}\meta{hours}|'|\meta{minutes}|'|.
 %   Where the file is not found, the \meta{str var} will be empty.
 %   \begin{texnote}
-%     The \XeTeX{} engine provides no way to implement this function.
+%     Currently this is not available with \XeTeX{}.
 %   \end{texnote}
 % \end{function}
 %
