Fixed argument N instead of n
The description of the \int_step_variable:… functions had wrong argument types.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -550,7 +550,7 @@
 % \end{function}
 %
 % \begin{function}[added = 2012-06-04, updated = 2018-04-22]
-%   {\int_step_variable:nnn, \int_step_variable:nnnn, \int_step_variable:nnnnn}
+%   {\int_step_variable:nNn, \int_step_variable:nnNn, \int_step_variable:nnnNn}
 %   \begin{syntax}
 %     \cs{int_step_variable:nNn} \Arg{final value} \meta{tl~var} \Arg{code}
 %     \cs{int_step_variable:nnNn} \Arg{initial value} \Arg{final value} \meta{tl~var} \Arg{code}
