--- a/l3experimental/l3draw/l3draw-boxes.dtx
+++ b/l3experimental/l3draw/l3draw-boxes.dtx
@@ -30,7 +30,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3draw} package\\ Boxes in drawings^^A
+%   The \pkg{l3draw-boxes} package\\ Boxes in drawings^^A
 % }
 %
 % \author{^^A
