Documentation stub for driver PDF functions [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -458,6 +458,16 @@
 %   given.
 % \end{function}
 %
+% \section{PDF Features}
+%
+% A range of PDF features are exposed by \pdfTeX{} and \LuaTeX{} in direct PDF
+% output mode, and the vast majority of these are also controllable using
+% the \texttt{(x)dvipdfmx} driver (as DVI instructions are converted directly
+% to PDF). They are \emph{not} generally applicable when using \texttt{dvips}
+% (as PostScript is the \enquote{controllable} target) or \texttt{dvisvgm}.
+% As such, the functions provided here are all defined to do nothing with the
+% latter drivers.
+%
 % \end{documentation}
 %
 % \begin{implementation}
