Finalise PDF dictionaries with pdfTeX/LuaTeX
No dedicated hook at the moment, so use the \AtEndDocument one.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1752,6 +1752,19 @@
       }
   }
 \cs_new:Npn \@@_pdf_dictionary_finalise:nn #1#2 { / #1 ~ #2 }
+\cs_if_exist:NTF \AtEndDocument
+  { \AtEndDocument { \@@_pdf_dictionary_finalise: } }
+  {
+    \cs_if_exist:NTF \everybye
+      {
+        \global \everybye \expandafter
+          {
+            \the \everybye
+            \@@_pdf_dictionary_finalise:
+          }
+      }
+      {  \tl_gput_left:Nn \bye { \@@_pdf_dictionary_finalise: } }
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
